@@ -28,7 +28,7 @@
                 <version>0.2.2</version>
                 <executions>
                     <execution>
-                        <id>generate-maven-plugins-job</id>
+                        <id>example-job</id>
                         <phase>compile</phase>
                         <goals>
                             <goal>generate</goal>
@@ -48,6 +48,166 @@
                                 <repository>
                                     <remote>git://github.com/evgeny-goldin/maven-plugins.git</remote>
                                 </repository>
+                            </job>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>standalone-jobs</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${user.home}/.jenkins/jobs</outputDirectory>
+                            <generationPom>
+                                http://github.com/evgeny-goldin/maven-plugins-test/blob/master/maven-jenkins-plugin/jenkins-book/pom.xml
+                            </generationPom>
+                            <jenkinsUrl>http://evgeny-goldin.org/jenkins</jenkinsUrl>
+                            <timestamp>false</timestamp>
+                            <jobs>
+                                <job>
+                                    <id>google-guice-trunk</id>
+                                    <description>Building Google Guice trunk</description>
+                                    <descriptionTable>
+                                        <row>
+                                            <key>Project Page</key>
+                                            <value>
+                                                <![CDATA[
+                                                <a href="http://code.google.com/p/google-guice/">
+                                                    <b><code>code.google.com/p/google-guice</code></b>
+                                                </a>
+                                                ]]>
+                                            </value>
+                                            <escapeHTML>false</escapeHTML>
+                                            <bottom>false</bottom>
+                                        </row>
+                                    </descriptionTable>
+                                    <jdkName>jdk1.6.0</jdkName>
+                                    <mavenName>apache-maven-3</mavenName>
+                                    <mavenOpts>-Xmx256m -XX:MaxPermSize=128m</mavenOpts>
+                                    <daysToKeep>5</daysToKeep>
+                                    <useUpdate>false</useUpdate>
+                                    <mavenGoals>-e clean install</mavenGoals>
+                                    <trigger>
+                                        <type>timer</type>
+                                        <expression>0 0 * * *</expression>
+                                    </trigger>
+                                    <repository>
+                                        <remote>http://google-guice.googlecode.com/svn/trunk/</remote>
+                                    </repository>
+                                    <mail>
+                                        <recipients>jenkins@evgeny-goldin.org</recipients>
+                                    </mail>
+                                </job>
+
+                                <job>
+                                    <id>jenkins-master</id>
+                                    <jdkName>jdk1.6.0</jdkName>
+                                    <numToKeep>5</numToKeep>
+                                    <mavenName>apache-maven-3</mavenName>
+                                    <trigger>
+                                        <type>timer</type>
+                                        <expression>0 1 * * *</expression>
+                                    </trigger>
+                                    <scmType>git</scmType>
+                                    <repository>
+                                        <remote>git://github.com/jenkinsci/jenkins.git</remote>
+                                    </repository>
+                                    <mail>
+                                        <recipients>jenkins@evgeny-goldin.org</recipients>
+                                        <sendForUnstable>false</sendForUnstable>
+                                    </mail>
+                                </job>
+                            </jobs>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>inheritance-jobs</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${user.home}/.jenkins/jobs</outputDirectory>
+                            <generationPom>
+                                http://github.com/evgeny-goldin/maven-plugins-test/blob/master/maven-jenkins-plugin/jenkins-book/pom.xml
+                            </generationPom>
+                            <jenkinsUrl>http://evgeny-goldin.org/jenkins</jenkinsUrl>
+                            <timestamp>false</timestamp>
+                            <jobs>
+                                
+                                <job>
+                                    <id>google-guice-inheritance-base</id>
+                                    <abstract>true</abstract>
+                                    <jdkName>jdk1.6.0</jdkName>
+                                    <mavenName>apache-maven-3</mavenName>
+                                    <daysToKeep>5</daysToKeep>
+                                    <useUpdate>true</useUpdate>
+                                    <mavenGoals>-B -e -U clean install</mavenGoals>
+                                    <mail><recipients>jenkins@evgeny-goldin.org</recipients></mail>
+                                </job>
+
+                                <job>
+                                    <id>google-guice-inheritance-trunk</id>
+                                    <parent>google-guice-inheritance-base</parent>
+                                    <repository>
+                                        <remote>http://google-guice.googlecode.com/svn/trunk/</remote>
+                                    </repository>
+                                    <invoke>
+                                        <jobs>google-guice-inheritance-3.0-rc3, google-guice-inheritance-2.0-maven</jobs>
+                                    </invoke>
+                                </job>
+
+                                <job>
+                                    <id>google-guice-inheritance-3.0-rc3</id>
+                                    <parent>google-guice-inheritance-base</parent>
+                                    <repository>
+                                        <remote>http://google-guice.googlecode.com/svn/tags/3.0-rc3/</remote>
+                                    </repository>
+                                </job>
+                                
+                                <job>
+                                    <id>google-guice-inheritance-2.0-maven</id>
+                                    <parent>google-guice-inheritance-base</parent>
+                                    <mavenName>apache-maven-2</mavenName>
+                                    <repository>
+                                        <remote>http://google-guice.googlecode.com/svn/branches/2.0-maven/</remote>
+                                    </repository>
+                                </job>
+                            </jobs>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>free-style-jobs</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${user.home}/.jenkins/jobs</outputDirectory>
+                            <generationPom>
+                                http://github.com/evgeny-goldin/maven-plugins-test/blob/master/maven-jenkins-plugin/jenkins-book/pom.xml
+                            </generationPom>
+                            <jenkinsUrl>http://evgeny-goldin.org/jenkins</jenkinsUrl>
+                            <timestamp>false</timestamp>
+                            <job>
+                                <id>free-style</id>
+                                <jobType>free</jobType>
+                                <scmType>git</scmType>
+                                <repository>
+                                    <remote>git://github.com/evgeny-goldin/maven-plugins-test.git</remote>
+                                </repository>
+                                <tasks>
+                                    <maven>
+                                        <mavenName>apache-maven-3</mavenName>
+                                        <jvmOptions>-Xmx128m -XX:MaxPermSize=128m -ea</jvmOptions>
+                                        <properties>plugins-version = 0.2.2</properties>
+                                    </maven>
+                                    <shell><command>pwd; ls -al; du -hs .</command></shell>
+                                </tasks>
                             </job>
                         </configuration>
                     </execution>
